@@ -1,3 +1,9 @@
+globus-gridftp-server (12.21-1+gt6.@distro@) @distro@; urgency=low
+
+  * fix sharing_groups_allow
+
+ -- Globus Toolkit <support@globus.org>  Wed, 17 Jul 2019 16:44:41 -0500
+
 globus-gridftp-server (12.20-1+gt6.@distro@) @distro@; urgency=low
 
   * exit after warning about invalid config in config.d dir
